# lightnow-proxy

./: .gitignore  CHANGELOG.md  Dockerfile  Makefile  README.md  config.example.yaml  pyproject.toml  release-please-config.json  server.json
.github/workflows/: ci.yml  release-please.yml  release.yml
docs/: ARCHITECTURE.md  release.md
examples/: echo_stdio_server.py  math_http_server.py
src/lightnow_proxy/: __init__.py  app.py  auth.py  capture.py  config.py  diagnostics.py  health.py  main.py  registry.py  request_context.py  router.py  runtime_secrets.py  upstream.py  version_inventory.py
tests/: test_capture.py  test_cli.py  test_config_auth_router.py  test_diagnostics.py  test_mcp_app.py  test_registry.py  test_runtime_secrets.py  test_server_json.py  test_version_inventory.py
